versioned_docs/version-2022.2.8/professor/mauro_cesar_de_souza_siena.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Mauro César de Souza Siena",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Matemática 2",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 3-1",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Matemática 3",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 3-1",
          students: [
            "EIN2020"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: []
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: []
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Estatística aplicada a estratégias empresariais",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Laboratório de Informatica B",
          students: [
            "TGC2022"
          ],
          time: "19:00 - 19:50"
        },
        {
          subject: "Estatística aplicada a estratégias empresariais",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Laboratório de Informatica B",
          students: [
            "TGC2022"
          ],
          time: "21:00 - 21:50"
        },
        {
          subject: "Matemática 1",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 6-2",
          students: [
            "EIN2022"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Matemática 4",
          size: 2,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 3-1",
          students: [
            "EIN2019"
          ],
          time: "09:25 - 10:15"
        },
        {
          subject: "Matemática 4",
          size: 1,
          teachers: [
            "Mauro César de Souza Siena"
          ],
          classroom: "Sala 3-1",
          students: [
            "EIN2019"
          ],
          time: "11:05 - 11:55"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:10 - 09:25",
      size: 15
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "11:55 - 13:10",
      size: 75
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "14:50 - 15:05",
      size: 15
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 19:00",
      size: 135
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "20:40 - 21:00",
      size: 20
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Mauro César de Souza Siena

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
